--- a/css/poh.css
+++ b/css/poh.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 .poh-method {
     font-weight: bold;
 }
@@ -16,56 +15,22 @@
     font-weight: bold;
 }
 
-blockquote {
-border-left: 5px solid #008fb9;
+ .poh-blockquote {
+    border-left: 5px solid #008fb9;
 }
 
 .poh-cite {
-border-left: 5px solid #d74545  !important;
+    border-left: 5px solid #d74545 !important;
 }
 
-.poh-footer{
-    padding:10px;
+.poh-opinion{
+    padding: 10px;
 }
 
-.poh-destak{
+.poh-footer {
+    padding: 10px;
+}
+
+.poh-destak {
     color: #d74545;
 }
-
-
-=======
-.poh-method {
-    font-weight: bold;
-}
-
-.poh-btn-verb {
-    margin-right: 10px;
-}
-
-.poh-route {
-    font-weight: bold;
-    color: black;
-}
-
-.poh-verb-description {
-    font-weight: bold;
-}
-
-blockquote {
-border-left: 5px solid #008fb9;
-}
-
-.poh-cite {
-border-left: 5px solid #d74545  !important;
-}
-
-.poh-footer{
-    padding:10px;
-}
-
-.poh-destak{
-    color: #d74545;
-}
-
-
->>>>>>> 00328124888888aed8165ade9a55b340ce954de2
